<?xml version="1.0" encoding="UTF-8"?>
<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.liftwizard</groupId>
        <artifactId>liftwizard-parent-build</artifactId>
        <version>0.1.0</version>
        <relativePath>../liftwizard-maven-build/liftwizard-parent-build</relativePath>
    </parent>

    <artifactId>liftwizard-example</artifactId>
    <name>Liftwizard Example Application</name>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <!-- You'll probably want to remove this for your project. We're just using it here
             so that dropwizard-example doesn't get deployed as a library. -->
        <maven.deploy.skip>true</maven.deploy.skip>
        <!-- You'll probably want to remove this for your project. We'Re just using it here
             so that dropwizard-example site doesn't get staged and deployed. -->
        <maven.site.skip>true</maven.site.skip>
        <maven.site.deploy.skip>true</maven.site.deploy.skip>
        <checkstyle.skip>true</checkstyle.skip>
    </properties>

    <repositories>
        <repository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>com.liftwizard</groupId>
                <artifactId>liftwizard-dependencies</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.dropwizard</groupId>
                <artifactId>dropwizard-bom</artifactId>
                <version>1.3.23</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-bundle-environment-config</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-configuration-factory-json</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-config-enabled</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-config-logging-config</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-bundle-logging-config</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-bundle-object-mapper</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-bundle-uuid</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-config-uuid-system</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-bundle-clock</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-config-clock-system</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-servlet-logging-structured-argument</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-servlet-logging-correlation-id</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-servlet-logging-resource-info</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-servlet-logging-structured-status-info</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-servlet-logging-structured-duration</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-bundle-logging-http</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-config-logging-logstash-file</artifactId>
            <version>${project.version}</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-config-clock-incrementing</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-clock-incrementing</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.liftwizard</groupId>
            <artifactId>liftwizard-config-uuid-seed</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.dropwizard</groupId>
            <artifactId>dropwizard-core</artifactId>
        </dependency>
        <dependency>
            <groupId>io.dropwizard</groupId>
            <artifactId>dropwizard-auth</artifactId>
        </dependency>
        <dependency>
            <groupId>io.dropwizard</groupId>
            <artifactId>dropwizard-assets</artifactId>
        </dependency>
        <dependency>
            <groupId>io.dropwizard</groupId>
            <artifactId>dropwizard-http2</artifactId>
        </dependency>
        <dependency>
            <groupId>io.dropwizard</groupId>
            <artifactId>dropwizard-hibernate</artifactId>
        </dependency>
        <dependency>
            <groupId>io.dropwizard</groupId>
            <artifactId>dropwizard-migrations</artifactId>
        </dependency>
        <dependency>
            <groupId>io.dropwizard</groupId>
            <artifactId>dropwizard-views-freemarker</artifactId>
        </dependency>
        <dependency>
            <groupId>io.dropwizard</groupId>
            <artifactId>dropwizard-views-mustache</artifactId>
        </dependency>
        <dependency>
            <groupId>io.dropwizard</groupId>
            <artifactId>dropwizard-metrics-graphite</artifactId>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
        </dependency>

        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.skyscreamer</groupId>
            <artifactId>jsonassert</artifactId>
        </dependency>

        <dependency>
            <groupId>io.dropwizard</groupId>
            <artifactId>dropwizard-testing</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.test-framework.providers</groupId>
            <artifactId>jersey-test-framework-provider-inmemory</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>javax.servlet</groupId>
                    <artifactId>javax.servlet-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.test-framework.providers</groupId>
            <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>javax.servlet</groupId>
                    <artifactId>javax.servlet-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <configuration>
                    <createDependencyReducedPom>true</createDependencyReducedPom>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>com.example.helloworld.HelloWorldApplication</mainClass>
                        </transformer>
                    </transformers>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.2</version>
                <executions>

                    <execution>
                        <id>analyze</id>
                        <goals>
                            <goal>analyze-only</goal>
                        </goals>
                        <configuration>
                            <failOnWarning>false</failOnWarning>
                        </configuration>
                    </execution>

                </executions>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>dev</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-shade-plugin</artifactId>
                        <executions>
                            <execution>
                                <phase>none</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jdk9</id>
            <activation>
                <jdk>9</jdk>
            </activation>
            <properties>
                <maven.compiler.source>1.9</maven.compiler.source>
                <maven.compiler.target>1.9</maven.compiler.target>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>--add-modules java.xml.bind</argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
